<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.smartspend.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_categories"
        android:name="com.example.smartspend.ui.Categories.CategoryFragment"
        android:label="@string/title_category"
        tools:layout="@layout/fragment_categories" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.smartspend.ui.Reminders.RemindersFragment"
        android:label="@string/title_reminders"
        tools:layout="@layout/fragment_reminders" />
</navigation>