<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/subtle_mint"
    tools:context=".AddExpences">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar6"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/head_back"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/TV_updateex"
        android:textColor="@color/white"
        android:textSize="@dimen/button_H2textsize"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_signUpWithGoogle"
        android:layout_width="90dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/orange"
        android:text="@string/btn_exp"
        android:textSize="@dimen/button_textsize"
        app:layout_constraintEnd_toStartOf="@+id/button6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <Button
        android:id="@+id/button6"
        android:layout_width="80dp"
        android:layout_height="35dp"
        android:backgroundTint="@color/green_2"
        android:text="@string/btn_inc"
        android:textSize="@dimen/button_textsize"
        app:layout_constraintBottom_toBottomOf="@+id/btn_signUpWithGoogle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_signUpWithGoogle" />

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar"
        android:layout_width="391dp"
        android:layout_height="446dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/round_co"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/tvCatId"
        android:layout_width="330dp"
        android:layout_height="37dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/expID"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/materialToolbar"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="@+id/materialToolbar"
        app:layout_constraintTop_toTopOf="@+id/materialToolbar" />

        <TextView
            android:id="@+id/tvExpIdshow"
            android:layout_width="330dp"
            android:layout_height="37dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/catIDdata"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/materialToolbar"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="@+id/materialToolbar"
            app:layout_constraintTop_toBottomOf="@+id/tvCatId" />

    <TextView
        android:id="@+id/tvCategory"
        android:layout_width="330dp"
        android:layout_height="37dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/expName1"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/materialToolbar"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="@+id/materialToolbar"
        app:layout_constraintTop_toBottomOf="@+id/tvExpIdshow" />

    <TextView
        android:id="@+id/tvShowCurrentExpence"
        android:layout_width="330dp"
        android:layout_height="37dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/expNameex"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/materialToolbar"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="@+id/materialToolbar"
        app:layout_constraintTop_toBottomOf="@+id/tvCategory" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="330dp"
            android:layout_height="37dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/edt_catdescription"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/materialToolbar"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="@+id/materialToolbar"
            app:layout_constraintTop_toBottomOf="@+id/tvShowCurrentExpence" />

        <TextView
            android:id="@+id/tvCurrentDescriptionExp"
            android:layout_width="330dp"
            android:layout_height="37dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/tvcurentDescription"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/materialToolbar"
            app:layout_constraintHorizontal_bias="0.803"
            app:layout_constraintStart_toStartOf="@+id/materialToolbar"
            app:layout_constraintTop_toBottomOf="@+id/tvDescription" />

        <TextView
            android:id="@+id/tvExpAmount"
            android:layout_width="330dp"
            android:layout_height="37dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/expAmount"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/materialToolbar"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="@+id/materialToolbar"
            app:layout_constraintTop_toBottomOf="@+id/tvCurrentDescriptionExp" />

        <TextView
            android:id="@+id/tvExpAmounVal"
            android:layout_width="330dp"
            android:layout_height="37dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/expAmountVal"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/materialToolbar"
            app:layout_constraintHorizontal_bias="0.804"
            app:layout_constraintStart_toStartOf="@+id/materialToolbar"
            app:layout_constraintTop_toBottomOf="@+id/tvExpAmount" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnUpdate"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/round_btn"
            android:text="@string/btn_updatecat"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/btnDeleteCategory"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnDeleteCategory"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/round_btn"
            android:text="@string/btn_deleteCat"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>